--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,6 +16,15 @@ pipeline {
             bat label: 'Test running', script: '''mvn test'''
        }
    }
+   
+  
+		stage('Jacoco Coverage Report') {
+		        steps{
+		            jacoco()
+		}
+	}
+
+   
     stage('Maven Package'){
         steps{
             echo 'Project packaging stage'
