--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,8 +8,6 @@ pipeline {
           }
     }
 
- 
-
     stage('Unit Test') {
           steps {
             echo 'Project Testing stage'
@@ -23,13 +21,27 @@ pipeline {
 		            jacoco()
 		}
 	}
-
-   
+	 
     stage('Maven Package'){
         steps{
             echo 'Project packaging stage'
             bat label: 'Project packaging', script: '''mvn package'''
         }
     } 
+    
+    stage('Generate Cucumber report') {
+            steps{
+                 cucumber buildStatus: 'UNSTABLE',
+                      reportTitle: 'My Cucumber Report',
+                      fileIncludePattern: '**/*.json',
+                         trendsLimit: 10,
+                      classifications: [
+                          [
+                              'key': 'Browser',
+                              'value': 'Chrome'
+                          ]
+                      ]
+                  }
+         }
   }
 }
